--- a/src/mumble/VoiceRecordingDialog.ui
+++ b/src/mumble/VoiceRecordingDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>450</width>
-    <height>252</height>
+    <height>219</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -135,16 +135,6 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Close</set>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QGroupBox" name="qgbOutput">
      <property name="title">
@@ -204,22 +194,5 @@
  <resources>
   <include location="mumble_tango.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>VoiceRecordingDialog</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>389</x>
-     <y>231</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>224</x>
-     <y>125</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
