Rename VoiceRecordingDialog to VoiceRecorderDialog. Do not recreate dialog every time recording is clicked.

--- a/src/mumble/VoiceRecorderDialog.ui
+++ b/src/mumble/VoiceRecorderDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>VoiceRecordingDialog</class>
- <widget class="QDialog" name="VoiceRecordingDialog">
+ <class>VoiceRecorderDialog</class>
+ <widget class="QDialog" name="VoiceRecorderDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
