Make sure recorder is aware of connection state. Don't show recorder icon in menu.

--- a/src/mumble/MainWindow.ui
+++ b/src/mumble/MainWindow.ui
@@ -792,6 +792,9 @@
    <property name="text">
     <string>Recording</string>
    </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
+   </property>
   </action>
  </widget>
  <customwidgets>
